--- a/src/scss/sections/_condition.scss
+++ b/src/scss/sections/_condition.scss
@@ -1,18 +1,16 @@
 .condition {
-    @include small-tablet{
+    @include small-tablet {
         overflow: hidden;
     }
 
-    &
-
-    &__pagination {
-        @include small-tablet{
+    & &__pagination {
+        @include small-tablet {
             justify-content: center;
         }
     }
 
     &__slider {
-        @include small-tablet{
+        @include small-tablet {
             overflow: visible !important;
         }
     }
@@ -29,7 +27,7 @@
         flex-direction: column;
         gap: 3rem;
 
-        @include small-tablet{
+        @include small-tablet {
             margin-top: 1rem;
         }
 
@@ -90,7 +88,7 @@
             margin-bottom: 6rem;
             padding-top: 6rem;
 
-            @include small-tablet{
+            @include small-tablet {
                 margin-bottom: 5rem;
             }
 
@@ -116,7 +114,7 @@
                 flex-direction: column;
                 gap: 2rem;
 
-                @include small-tablet{
+                @include small-tablet {
                     max-width: 55.8rem;
                     gap: 1.6rem;
                 }
@@ -155,7 +153,7 @@
             top: -6rem;
             z-index: -1;
 
-            @include small-tablet{
+            @include small-tablet {
                 right: 1rem;
                 top: -6rem;
                 height: 16.8rem;
@@ -206,12 +204,12 @@
         background-color: #24272a;
         position: relative;
 
-        @include small-tablet{
+        @include small-tablet {
             padding: 8.6rem 0;
         }
 
         &-pagination {
-            @include small-tablet{
+            @include small-tablet {
                 justify-content: center;
                 margin-top: 6rem;
                 position: relative;
@@ -220,16 +218,18 @@
         }
 
         .swiper-slide {
-            &:hover {
-                .condition__slider-image {
-                    transform: scale(1.1);
+            @media (any-hover: hover) {
+                &:hover {
+                    .condition__slider-image {
+                        transform: scale(1.1);
+                    }
                 }
             }
 
             p {
                 white-space: nowrap;
 
-                @include small-tablet{
+                @include small-tablet {
                     font-weight: 700;
                     font-size: 3rem;
                 }
@@ -257,7 +257,7 @@
     &__slider-image {
         transition: 0.3s transform ease;
 
-        @include small-tablet{
+        @include small-tablet {
             width: 100%;
             height: 15rem;
 
@@ -290,7 +290,7 @@
         flex-direction: column;
         gap: 2.3rem;
 
-        @include small-tablet{
+        @include small-tablet {
             gap: 4rem;
         }
 
