--- a/src/scss/sections/footer.scss
+++ b/src/scss/sections/footer.scss
@@ -9,7 +9,7 @@
             top: -15rem;
             z-index: -3;
 
-            @include small-tablet{
+            @include small-tablet {
                 background: url('./assets/images/sections/footer/background-mobile.webp') no-repeat;
                 top: -36rem;
                 background-size: 100% 100%;
@@ -33,7 +33,7 @@
         gap: 5rem;
         padding: 2.6rem 0 6.6rem;
 
-        @include small-tablet{
+        @include small-tablet {
             padding: 3.6rem 0 6.6rem;
         }
     }
@@ -233,8 +233,10 @@
                     font-size: 2.8rem;
                 }
 
-                &:hover {
-                    color: $white;
+                @media (any-hover: hover) {
+                    &:hover {
+                        color: $white;
+                    }
                 }
             }
         }
