--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -57,6 +57,10 @@ section {
     &:not(.home-page) {
         main {
             padding-top: 20rem;
+
+            @include small-tablet {
+                padding-top: 22rem;
+            }
         }
     }
 }
