--- a/src/ui/styles/news-card.scss
+++ b/src/ui/styles/news-card.scss
@@ -8,8 +8,14 @@
         height: 100%;
         transition: 0.3s box-shadow ease;
 
-        &:hover {
-            box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.2);
+        @include small-tablet {
+            padding-bottom: 4.8rem;
+        }
+
+        @media (any-hover: hover) {
+            &:hover {
+                box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.2);
+            }
         }
     }
 
@@ -17,12 +23,20 @@
         height: 37.4rem;
         position: relative;
 
+        @include small-tablet {
+            height: 50rem;
+        }
+
         &::after {
             @include pseudo {
                 inset: 0;
                 bottom: -0.1rem;
                 right: -0.1rem;
                 background: linear-gradient(180deg, rgba(25, 28, 32, 0) 36.37%, #191c20 85.18%);
+
+                @include small-tablet {
+                    background: linear-gradient(180deg, rgba(25, 28, 32, 0) 34.83%, #191c20 88.57%);
+                }
             }
         }
 
@@ -40,6 +54,10 @@
         z-index: 1;
         margin-top: -9rem;
         height: 100%;
+
+        @include small-tablet {
+            padding: 0 4.8rem;
+        }
     }
 
     &__category {
@@ -50,6 +68,11 @@
         color: $orange;
         display: block;
         margin-bottom: 2rem;
+
+        @include small-tablet {
+            margin-bottom: 4.8rem;
+            font-size: 3.4rem;
+        }
     }
 
     &__title {
@@ -59,6 +82,11 @@
         margin-bottom: 2rem;
         display: block;
         font-family: 'Druk Wide Cyr';
+
+        @include small-tablet {
+            font-size: 3.6rem;
+            margin-bottom: 7rem;
+        }
     }
 
     &__description {
@@ -66,17 +94,30 @@
         line-height: 140%;
         color: $gray;
 
+        @include small-tablet {
+            margin-bottom: 6.4rem;
+            font-size: 3rem;
+        }
+
         &:not(:last-child) {
             margin-bottom: 0.5rem;
         }
 
         &:last-of-type {
             margin-bottom: 4rem;
+
+            @include small-tablet {
+                margin-bottom: 6.4rem;
+            }
         }
     }
 
     &__link {
         margin-top: auto;
         width: fit-content;
+
+        @include small-tablet {
+            width: 100%;
+        }
     }
 }
