feat: popular promotions mobile version

--- a/src/components/_promotion.html
+++ b/src/components/_promotion.html
@@ -4,28 +4,41 @@
             <h1 class="promotion__title h h_1">СЕЗОННАЯ АКЦИЯ «23+7»</h1>
 
             <div class="promotion__poster">
-               <div class="promotion__poster-info">
-                   <h2 class="promotion__poster-title">
-                       Арендуйте TOYOTA RAV-4 на 30 суток и получите Скидку в 14 000₽! 
-                   </h2>
+                <div class="promotion__poster-info">
+                    <h2 class="promotion__poster-title">
+                        Арендуйте TOYOTA RAV-4 на 30 суток и получите Скидку в 14 000₽! 
+                    </h2>
 
-                   <p class="promotion__poster-description">
-                       Вы планируете отправится в длительное путешествие, на зимних каникулах по нашему
-                       замечательному острову? Мы будем рады, если вы проведете это время, на нашем Автомобиле!
-                       Арендуйте автомобиль на 23 дня и мы дарим вам 7 Суток аренды бесплатно!
-                   </p>
+                    <p class="promotion__poster-description">
+                        Вы планируете отправится в длительное путешествие, на зимних каникулах по нашему
+                        замечательному острову? Мы будем рады, если вы проведете это время, на нашем
+                        Автомобиле! Арендуйте автомобиль на 23 дня и мы дарим вам 7 Суток аренды бесплатно!
+                    </p>
 
-                   <small class="promotion__poster-condition">
-                       Акция действует с 15.10.2023 по 15.04.2024
-                   </small>
+                    <small class="promotion__poster-condition">
+                        Акция действует с 15.10.2023 по 15.04.2024
+                    </small>
 
-                   <button class="promotion__poster-button btn">
-                       <span class="btn__txt"> Забронировать </span>
-                   </button>
-               </div>
+                    <button class="promotion__poster-button btn">
+                        <span class="btn__txt"> Забронировать </span>
+                    </button>
+                </div>
 
-                <figure class="promotion__poster-image">
-                    <img src="./assets/images/sections/promotion/banner-image.png" alt="">
+                <figure class="promotion__poster-background">
+                    <img
+                        src="./assets/images/sections/promotion/banner-background.png"
+                        class="_desktop-only"
+                        alt=""
+                    />
+                    <img
+                        src="./assets/images/sections/promotion/banner-background-mobile.png"
+                        class="_mobile-only"
+                        alt=""
+                    />
+                </figure>
+
+                <figure class="promotion__poster-car">
+                    <img src="./assets/images/sections/promotion/banner-car-1.png" alt="" />
                 </figure>
             </div>
         </div>
