--- a/src/scss/sections/_promotion.scss
+++ b/src/scss/sections/_promotion.scss
@@ -3,20 +3,56 @@
 
     &__title {
         margin-bottom: 8rem;
+
+        @include small-tablet {
+            margin-bottom: 7rem;
+        }
     }
 
     &__poster {
         position: relative;
         padding: 3.6rem 3.6rem 3.6rem 3.9rem;
+        max-width: 126.3rem;
+        width: 100%;
+
+        @include small-tablet {
+            max-width: 100%;
+            padding: 4.8rem;
+        }
 
         &-info {
             max-width: 63.4rem;
+
+            @include small-tablet {
+                max-width: 100%;
+                margin-bottom: 8rem;
+            }
         }
 
-        &-image {
+        &-background {
             position: absolute;
             inset: 0;
             z-index: -1;
+        }
+
+        &-car {
+            position: absolute;
+            right: -40rem;
+            bottom: -2.5rem;
+            max-width: 100rem;
+            width: 100%;
+            max-height: 90rem;
+
+            @include small-tablet {
+                position: initial;
+                max-width: 100%;
+                max-height: 100%;
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
         }
 
         &-title {
@@ -25,6 +61,11 @@
             line-height: 140%;
             text-transform: uppercase;
             margin-bottom: 3.6rem;
+
+            @include small-tablet {
+                font-size: 3.6rem;
+                margin-bottom: 6.4rem;
+            }
         }
 
         &-description {
@@ -33,6 +74,12 @@
             color: $gray;
             margin-bottom: 2.4rem;
             max-width: 56.3rem;
+
+            @include small-tablet {
+                font-size: 3rem;
+                margin-bottom: 6.4rem;
+                max-width: 100%;
+            }
         }
 
         &-condition {
@@ -40,6 +87,17 @@
             line-height: 140%;
             margin-bottom: 6rem;
             display: block;
+
+            @include small-tablet {
+                font-size: 3rem;
+                margin-bottom: 6.4rem;
+            }
+        }
+
+        &-button {
+            @include small-tablet {
+                width: 100%;
+            }
         }
     }
 }
