--- a/src/scss/sections/_contact.scss
+++ b/src/scss/sections/_contact.scss
@@ -1,5 +1,99 @@
 .contacts {
     position: relative;
+
+    .rental-page & {
+        .contacts__title {
+            margin-left: auto;
+
+            @include small-tablet {
+                margin-left: initial;
+            }
+        }
+
+        .contact-form {
+            margin-right: auto;
+            margin-top: 0;
+            min-height: initial;
+
+            @include small-tablet {
+                margin-top: 11rem;
+
+                &__title {
+                    margin-bottom: 2rem;
+                }
+            }
+        }
+
+        .contacts__map {
+            top: 13rem;
+        }
+
+        .contacts__wrapper {
+            gap: 1rem;
+        }
+
+        .contact-form__inner {
+            min-height: initial;
+            gap: 4.5rem;
+            padding-bottom: 9.3rem;
+
+            &::after {
+                z-index: -1;
+            }
+        }
+
+        .contact-form__file {
+            position: relative;
+            margin-bottom: 2.8rem;
+            min-height: 4.8rem;
+
+            label {
+                display: flex;
+                align-items: center;
+                gap: 1.2rem;
+                cursor: pointer;
+
+                img {
+                    width: 4.4rem;
+                    height: 4.4rem;
+                }
+
+                span {
+                    font-weight: 400;
+                    font-size: 1.8rem;
+                    line-height: 133%;
+                    letter-spacing: 0.08em;
+                    text-transform: uppercase;
+                    color: $gray;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 2;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                }
+            }
+
+            input {
+                position: absolute;
+                width: 1px;
+                height: 1px;
+                padding: 0;
+                margin: -1px;
+                overflow: hidden;
+                clip: rect(0, 0, 0, 0);
+                white-space: nowrap;
+                border-width: 0;
+            }
+        }
+
+        .contacts__footer {
+            flex-direction: row-reverse;
+
+            @include small-tablet {
+                flex-direction: column;
+            }
+        }
+    }
+
     // .contacts__inner
     &__inner {
         display: flex;
@@ -36,6 +130,13 @@
                 border-radius: 50%;
                 filter: blur(7.9rem);
                 background: #ffffff;
+
+                @include small-tablet {
+                    right: 14rem;
+                    filter: blur(11.9rem);
+                    bottom: auto;
+                    top: 76rem;
+                }
             }
         }
 
