--- a/src/components/_routes.html
+++ b/src/components/_routes.html
@@ -1,4 +1,4 @@
-<section class="routes">
+<section class="routes swiper-slide">
     <div class="container">
         <div class="routes__content">
             <h2 class="routes__title h h_2">Маршруты и ограничения по проезду</h2>
@@ -10,16 +10,22 @@
                         <label for="tab-1">юг</label>
                         <div class="routes__tabs-content">
                             <figure class="routes__tabs-content-path">
-                                <img src="./assets/images/sections/routes/path-1.svg" alt="" class="_desktop-only"/>
-                                <img src="./assets/images/sections/routes/path-1-m.svg" alt="" class="_mobile-only"/>
+                                <img
+                                    src="./assets/images/sections/routes/path-1.svg"
+                                    alt=""
+                                    class="_desktop-only"
+                                />
+                                <img
+                                    src="./assets/images/sections/routes/path-1-m.svg"
+                                    alt=""
+                                    class="_mobile-only"
+                                />
                             </figure>
 
                             <div class="routes__tabs-attractions _desktop-only">
                                 <span class="routes__tabs-attractions-title"> Достопримечательности </span>
 
-                                <p class="routes__tabs-attractions-text">
-
-                                </p>
+                                <p class="routes__tabs-attractions-text"></p>
 
                                 <div class="swiper routes__tabs-attractions-swiper">
                                     <div class="swiper-wrapper">
@@ -32,9 +38,9 @@
                                             </figure>
 
                                             <p class="routes__tabs-attractions-swiper-text">
-                                                На Юг острова автомобили предоставляются до поселка Новиково Корсаковского
-                                                района . По пути Можно посетить места Смотровая площадка на Морской порт
-                                                города Корсаков и тд
+                                                На Юг острова автомобили предоставляются до поселка Новиково
+                                                Корсаковского района . По пути Можно посетить места Смотровая
+                                                площадка на Морской порт города Корсаков и тд
                                             </p>
                                         </div>
                                         <div class="swiper-slide">
@@ -46,7 +52,8 @@
                                             </figure>
 
                                             <p class="routes__tabs-attractions-swiper-text">
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, quia?
+                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                                Atque, quia?
                                             </p>
                                         </div>
                                         <div class="swiper-slide">
@@ -58,7 +65,8 @@
                                             </figure>
 
                                             <p class="routes__tabs-attractions-swiper-text">
-                                                asdaaLorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, quis.
+                                                asdaaLorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                                Maiores, quis.
                                             </p>
                                         </div>
                                         <div class="swiper-slide">
@@ -70,9 +78,9 @@
                                             </figure>
 
                                             <p class="routes__tabs-attractions-swiper-text">
-                                                На Юг острова автомобили предоставляются до поселка Новиково Корсаковского
-                                                района . По пути Можно посетить места Смотровая площадка на Морской порт
-                                                города Корсаков и тд
+                                                На Юг острова автомобили предоставляются до поселка Новиково
+                                                Корсаковского района . По пути Можно посетить места Смотровая
+                                                площадка на Морской порт города Корсаков и тд
                                             </p>
                                         </div>
                                     </div>
@@ -158,9 +166,7 @@
                             <div class="routes__tabs-attractions _desktop-only">
                                 <span class="routes__tabs-attractions-title"> Достопримечательности </span>
 
-                                <p class="routes__tabs-attractions-text">
-
-                                </p>
+                                <p class="routes__tabs-attractions-text"></p>
 
                                 <div class="swiper routes__tabs-attractions-swiper">
                                     <div class="swiper-wrapper">
@@ -173,9 +179,9 @@
                                             </figure>
 
                                             <p class="routes__tabs-attractions-swiper-text">
-                                                На Юг острова автомобили предоставляются до поселка Новиково Корсаковского
-                                                района . По пути Можно посетить места Смотровая площадка на Морской порт
-                                                города Корсаков и тд
+                                                На Юг острова автомобили предоставляются до поселка Новиково
+                                                Корсаковского района . По пути Можно посетить места Смотровая
+                                                площадка на Морской порт города Корсаков и тд
                                             </p>
                                         </div>
                                         <div class="swiper-slide">
@@ -187,7 +193,8 @@
                                             </figure>
 
                                             <p class="routes__tabs-attractions-swiper-text">
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, quia?
+                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                                Atque, quia?
                                             </p>
                                         </div>
                                         <div class="swiper-slide">
@@ -199,7 +206,8 @@
                                             </figure>
 
                                             <p class="routes__tabs-attractions-swiper-text">
-                                                asdaaLorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, quis.
+                                                asdaaLorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                                Maiores, quis.
                                             </p>
                                         </div>
                                         <div class="swiper-slide">
@@ -211,9 +219,9 @@
                                             </figure>
 
                                             <p class="routes__tabs-attractions-swiper-text">
-                                                На Юг острова автомобили предоставляются до поселка Новиково Корсаковского
-                                                района . По пути Можно посетить места Смотровая площадка на Морской порт
-                                                города Корсаков и тд
+                                                На Юг острова автомобили предоставляются до поселка Новиково
+                                                Корсаковского района . По пути Можно посетить места Смотровая
+                                                площадка на Морской порт города Корсаков и тд
                                             </p>
                                         </div>
                                     </div>
@@ -299,9 +307,7 @@
                             <div class="routes__tabs-attractions _desktop-only">
                                 <span class="routes__tabs-attractions-title"> Достопримечательности </span>
 
-                                <p class="routes__tabs-attractions-text">
-
-                                </p>
+                                <p class="routes__tabs-attractions-text"></p>
 
                                 <div class="swiper routes__tabs-attractions-swiper">
                                     <div class="swiper-wrapper">
@@ -314,9 +320,9 @@
                                             </figure>
 
                                             <p class="routes__tabs-attractions-swiper-text">
-                                                На Юг острова автомобили предоставляются до поселка Новиково Корсаковского
-                                                района . По пути Можно посетить места Смотровая площадка на Морской порт
-                                                города Корсаков и тд
+                                                На Юг острова автомобили предоставляются до поселка Новиково
+                                                Корсаковского района . По пути Можно посетить места Смотровая
+                                                площадка на Морской порт города Корсаков и тд
                                             </p>
                                         </div>
                                         <div class="swiper-slide">
@@ -328,7 +334,8 @@
                                             </figure>
 
                                             <p class="routes__tabs-attractions-swiper-text">
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, quia?
+                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                                Atque, quia?
                                             </p>
                                         </div>
                                         <div class="swiper-slide">
@@ -340,7 +347,8 @@
                                             </figure>
 
                                             <p class="routes__tabs-attractions-swiper-text">
-                                                asdaaLorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, quis.
+                                                asdaaLorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                                Maiores, quis.
                                             </p>
                                         </div>
                                         <div class="swiper-slide">
@@ -352,9 +360,9 @@
                                             </figure>
 
                                             <p class="routes__tabs-attractions-swiper-text">
-                                                На Юг острова автомобили предоставляются до поселка Новиково Корсаковского
-                                                района . По пути Можно посетить места Смотровая площадка на Морской порт
-                                                города Корсаков и тд
+                                                На Юг острова автомобили предоставляются до поселка Новиково
+                                                Корсаковского района . По пути Можно посетить места Смотровая
+                                                площадка на Морской порт города Корсаков и тд
                                             </p>
                                         </div>
                                     </div>
@@ -440,9 +448,7 @@
                             <div class="routes__tabs-attractions _desktop-only">
                                 <span class="routes__tabs-attractions-title"> Достопримечательности </span>
 
-                                <p class="routes__tabs-attractions-text">
-
-                                </p>
+                                <p class="routes__tabs-attractions-text"></p>
 
                                 <div class="swiper routes__tabs-attractions-swiper">
                                     <div class="swiper-wrapper">
@@ -455,9 +461,9 @@
                                             </figure>
 
                                             <p class="routes__tabs-attractions-swiper-text">
-                                                На Юг острова автомобили предоставляются до поселка Новиково Корсаковского
-                                                района . По пути Можно посетить места Смотровая площадка на Морской порт
-                                                города Корсаков и тд
+                                                На Юг острова автомобили предоставляются до поселка Новиково
+                                                Корсаковского района . По пути Можно посетить места Смотровая
+                                                площадка на Морской порт города Корсаков и тд
                                             </p>
                                         </div>
                                         <div class="swiper-slide">
@@ -469,7 +475,8 @@
                                             </figure>
 
                                             <p class="routes__tabs-attractions-swiper-text">
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, quia?
+                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                                Atque, quia?
                                             </p>
                                         </div>
                                         <div class="swiper-slide">
@@ -481,7 +488,8 @@
                                             </figure>
 
                                             <p class="routes__tabs-attractions-swiper-text">
-                                                asdaaLorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, quis.
+                                                asdaaLorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                                Maiores, quis.
                                             </p>
                                         </div>
                                         <div class="swiper-slide">
@@ -493,9 +501,9 @@
                                             </figure>
 
                                             <p class="routes__tabs-attractions-swiper-text">
-                                                На Юг острова автомобили предоставляются до поселка Новиково Корсаковского
-                                                района . По пути Можно посетить места Смотровая площадка на Морской порт
-                                                города Корсаков и тд
+                                                На Юг острова автомобили предоставляются до поселка Новиково
+                                                Корсаковского района . По пути Можно посетить места Смотровая
+                                                площадка на Морской порт города Корсаков и тд
                                             </p>
                                         </div>
                                     </div>
@@ -582,14 +590,11 @@
 
                 <div class="routes__tabs-info">
                     <p class="routes__tabs-info-text _desktop-only">
-                        Оптимальный тип автомобиля
-                        для данного маршрута
-                        внедорожник Suzuki Jimny
+                        Оптимальный тип автомобиля для данного маршрута внедорожник Suzuki Jimny
                     </p>
 
                     <p class="routes__tabs-info-text _mobile-only">
-                        Оптимальный тип автомобиля –
-                        внедорожник Suzuki Jimny
+                        Оптимальный тип автомобиля – внедорожник Suzuki Jimny
                     </p>
 
                     <ul class="routes__tabs-info-list">
@@ -597,7 +602,9 @@
                             <span style="--color: #ff6c01" class="routes__tabs-info-item-designation"> </span>
 
                             <div class="routes__tabs-info-item-text">
-                                <strong class="routes__tabs-info-item-title"> Асфальтированные дороги </strong>
+                                <strong class="routes__tabs-info-item-title">
+                                    Асфальтированные дороги
+                                </strong>
 
                                 <p class="routes__tabs-info-item-description">легковые и кроссоверы</p>
                             </div>
