--- a/src/scss/sections/_choose.scss
+++ b/src/scss/sections/_choose.scss
@@ -48,6 +48,24 @@
     // .choose__container
 
     &__container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    // .choose__head
+
+    &__head {
+        margin-bottom: 8rem;
+
+        @media (min-width: 48em) {
+            margin-bottom: 6rem;
+            text-align: center;
+        }
+    }
+
+    // .choose__body
+
+    &__body {
         position: relative;
         z-index: 7;
         display: grid;
@@ -89,7 +107,7 @@
         align-self: center;
 
         @media (min-width: 48em) {
-            margin-bottom: 13.6rem;
+            margin-bottom: 21rem;
             align-self: flex-start;
         }
     }
@@ -109,7 +127,7 @@
 
         @media (min-width: 48em) {
             .info-item__subtitle {
-                max-width: 21.6rem;
+                max-width: 22.6rem;
             }
         }
     }
@@ -119,8 +137,8 @@
     &__info-item {
         &:nth-child(2) {
             svg {
-                width: 4rem;
-                height: 4rem;
+                width: 3rem;
+                height: 3rem;
             }
         }
     }
@@ -134,6 +152,15 @@
         flex-direction: column;
         min-width: 0;
         width: 100%;
+
+        ._is-hovered & {
+            &::before {
+                opacity: 0;
+            }
+            &::after {
+                opacity: 1;
+            }
+        }
 
         ._is-passed & {
             &:not(&._is-animating) {
@@ -149,7 +176,8 @@
             }
         }
 
-        &::before {
+        &::before,
+        &::after {
             content: '';
             position: absolute;
             z-index: -1;
@@ -157,10 +185,8 @@
             left: -11rem;
             width: 120rem;
             height: 180rem;
-            background-image: url(./assets/images/bg/white-gradient.webp);
             background-size: contain;
             background-repeat: no-repeat;
-            opacity: var(--whiteGradientOpacity);
             transition: opacity 0.4s ease;
 
             @media (max-width: 48em) {
@@ -169,10 +195,18 @@
                 margin-bottom: 12.6rem;
                 width: 174rem;
                 height: 63rem;
-                opacity: 1;
             }
         }
 
+        &::before {
+            background-image: url(./assets/images/bg/white-gradient.webp);
+            opacity: var(--whiteGradientOpacity);
+        }
+
+        &::after {
+            opacity: 0;
+            background-image: url(./assets/images/bg/orange-gradient.svg);
+        }
 
         &._is-animating {
             .choose__heading-wrap {
@@ -185,6 +219,15 @@
             padding-top: 14rem;
             padding-left: 5rem;
             justify-self: center;
+        }
+
+        @media (max-width: 48em) {
+            &::before {
+                opacity: 1;
+            }
+            &::after {
+                content: none;
+            }
         }
     }
 
@@ -228,7 +271,6 @@
                 right: 0;
                 height: 100%;
                 opacity: 0;
-                pointer-events: none;
                 transition:
                     transform 0.6s ease,
                     opacity 0.3s ease;
@@ -242,12 +284,13 @@
                     opacity: 1;
                     transform: scale(1);
 
-                        transition-delay: 0.2s;
+                    transition-delay: 0.2s;
 
-                    ._prev-slide & {
-                        transition: transform 0.6s ease 0.3s, opacity 0.3s ease;
+                    ._reverse & {
+                        transition:
+                            transform 0.6s ease 0.3s,
+                            opacity 0.3s ease;
                     }
-
                 }
 
                 &._is-prev {
@@ -257,30 +300,29 @@
                         opacity 0.3s ease,
                         transform 0.6s ease;
 
-                    &:not(._prev-slide &) {
+                    &:not(._reverse &) {
                         transition:
                             opacity 0.3s ease 1s,
                             transform 0.6s ease;
                     }
-                    ._prev-slide & {
+                    ._reverse & {
                         display: none;
                     }
                 }
 
                 &._is-next {
+                    pointer-events: none;
                     transform: scale(0.33) translate(199rem, 2rem);
-                    pointer-events: all;
-                    cursor: pointer;
                     transition:
-                            transform 0.6s ease,
-                            opacity 0.3s ease;
+                        transform 0.6s ease,
+                        opacity 0.3s ease;
 
                     &.swiper-slide-next {
                         z-index: 2;
                         opacity: 1;
                     }
 
-                    &:not(._prev-slide &) {
+                    &:not(._reverse &) {
                         transition-delay: 0.5s;
                     }
                 }
@@ -315,11 +357,43 @@
         // .choose__sl-arr_prev
 
         &_prev {
+            ._reverse & {
+                box-shadow:
+                    inset 0 -0.16rem 0.8rem #9e4504,
+                    inset 0.32rem 0.32rem 0.16rem #ff6c00;
+                &::after {
+                    opacity: 1;
+                    background: rgba(255, 108, 1, 1);
+                }
+                &::before {
+                    opacity: 0;
+                }
+
+                svg path {
+                    fill: $white;
+                }
+            }
         }
 
         // .choose__sl-arr_next
 
         &_next {
+            ._forward & {
+                box-shadow:
+                    inset 0 -0.16rem 0.8rem #9e4504,
+                    inset 0.32rem 0.32rem 0.16rem #ff6c00;
+                &::after {
+                    opacity: 1;
+                    background: rgba(255, 108, 1, 1);
+                }
+                &::before {
+                    opacity: 0;
+                }
+
+                svg path {
+                    fill: $white;
+                }
+            }
         }
     }
 
@@ -400,7 +474,7 @@
 
     &__btn {
         align-self: flex-end;
-        transform: translateY(-0.4rem);
+        transform: translateY(-9rem);
 
         @media (max-width: 48em) {
             align-self: stretch;
