--- a/src/ui/styles/_info-item.scss
+++ b/src/ui/styles/_info-item.scss
@@ -10,13 +10,13 @@
     // .info-item__icon
 
     &__icon {
-        flex: 0 0 10.7rem;
-        width: 10.7rem;
-        height: 10.7rem;
+        flex: 0 0 9rem;
+        width: 9rem;
+        height: 9rem;
 
         svg {
-            width: 4.5rem;
-            height: 4.5rem;
+            width: 3.5rem;
+            height: 3.5rem;
         }
     }
 
@@ -32,7 +32,8 @@
 
     &__subtitle {
         @media (min-width: 48em) {
-            font-size: 3.2rem;
+            max-width: 18.6rem;
+            font-size: 2.4rem;
             span {
                 display: block;
             }
