--- a/src/components/_choose.html
+++ b/src/components/_choose.html
@@ -1,4 +1,4 @@
-<section data-sc class="choose">
+<section class="choose">
     <div class="choose__container container">
         <div class="choose__head">
             <span class="choose__heading h h_2">Популярные автомобили</span>
