--- a/src/scss/sections/_choose.scss
+++ b/src/scss/sections/_choose.scss
@@ -224,6 +224,56 @@
             padding-top: 14rem;
             padding-left: 5rem;
             justify-self: center;
+
+            ._reverse:not(&._is-end) ._is-prev,
+            &._is-end._reverse ._is-prev {
+                transition:
+                    opacity 0.3s ease,
+                    transform 0.6s ease 0.3s;
+            }
+
+            ._is-end._forward ._next-active,
+            ._is-end._reverse ._next-active {
+                transform: scale(0.33) translate(199rem, 2rem);
+                opacity: 1;
+            }
+
+            ._is-end._forward {
+                ._next-active {
+                    transition:
+                        opacity 0.3s ease,
+                        transform 0.6s ease;
+                }
+            }
+
+            ._is-end._reverse {
+                ._is-prev:not(._is-prev._next-active) {
+                    transform: scale(0.4);
+                    opacity: 0;
+                }
+                .swiper-slide._next-active {
+                    transition: transform 0.6s ease;
+                }
+            }
+
+            ._is-beginning._forward,
+            ._is-beginning._reverse {
+                ._prev-active {
+                    transform: scale(0.4);
+                    opacity: 0;
+                }
+            }
+
+            ._is-beginning._forward {
+                ._prev-active {
+                    transition:
+                        opacity 0.3s ease 0.6s,
+                        transform 0.6s ease;
+                }
+                ._next-active {
+                    transition: opacity 0.3s ease 0.3s;
+                }
+            }
         }
 
         @media (max-width: 48em) {
@@ -276,60 +326,32 @@
                 right: 0;
                 height: 100%;
                 opacity: 0;
+                pointer-events: none;
                 transition:
-                    transform 0.6s ease,
-                    opacity 0.3s ease;
-
-                &:not(&.swiper-slide-prev, &.swiper-slide-active, &.swiper-slide-next) {
-                    opacity: 0;
-                }
+                    opacity 0.3s ease,
+                    transform 0.6s ease;
 
                 &.swiper-slide-active {
                     z-index: 2;
+                    pointer-events: all;
                     opacity: 1;
                     transform: scale(1);
-
-                    transition-delay: 0.2s;
-
-                    ._reverse & {
-                        transition:
-                            transform 0.6s ease 0.3s,
-                            opacity 0.3s ease;
-                    }
                 }
 
                 &._is-prev {
                     transform: scale(0.4);
                     opacity: 0;
                     transition:
-                        opacity 0.3s ease,
+                        opacity 0.3s ease 1s,
                         transform 0.6s ease;
-
-                    &:not(._reverse &) {
-                        transition:
-                            opacity 0.3s ease 1s,
-                            transform 0.6s ease;
-                    }
-                    ._reverse & {
-                        display: none;
-                    }
                 }
 
                 &._is-next {
-                    pointer-events: none;
                     transform: scale(0.33) translate(199rem, 2rem);
-                    transition:
-                        transform 0.6s ease,
-                        opacity 0.3s ease;
-
-                    &.swiper-slide-next {
-                        z-index: 2;
-                        opacity: 1;
-                    }
-
-                    &:not(._reverse &) {
-                        transition-delay: 0.5s;
-                    }
+                }
+                &.swiper-slide-next:not(._is-beginning &, ._is-end &),
+                &._next-active {
+                    opacity: 1;
                 }
             }
         }
@@ -362,43 +384,11 @@
         // .choose__sl-arr_prev
 
         &_prev {
-            ._reverse & {
-                box-shadow:
-                    inset 0 -0.16rem 0.8rem #9e4504,
-                    inset 0.32rem 0.32rem 0.16rem #ff6c00;
-                &::after {
-                    opacity: 1;
-                    background: rgba(255, 108, 1, 1);
-                }
-                &::before {
-                    opacity: 0;
-                }
-
-                svg path {
-                    fill: $white;
-                }
-            }
         }
 
         // .choose__sl-arr_next
 
         &_next {
-            ._forward & {
-                box-shadow:
-                    inset 0 -0.16rem 0.8rem #9e4504,
-                    inset 0.32rem 0.32rem 0.16rem #ff6c00;
-                &::after {
-                    opacity: 1;
-                    background: rgba(255, 108, 1, 1);
-                }
-                &::before {
-                    opacity: 0;
-                }
-
-                svg path {
-                    fill: $white;
-                }
-            }
         }
     }
 
@@ -450,13 +440,13 @@
     // .choose__characteristics-icon
 
     &__characteristics-icon {
-        flex: 0 0 10.7rem;
-        width: 10.7rem;
-        height: 10.7rem;
+        flex: 0 0 9.7rem;
+        width: 9.7rem;
+        height: 9.7rem;
 
         svg {
-            width: 4.5rem;
-            height: 4.5rem;
+            width: 3.5rem;
+            height: 3.5rem;
 
             path {
                 transition: stroke 0.3s ease;
