--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -156,6 +156,7 @@ section {
 
 // ui
 @import '../ui/styles/ui.scss';
+@import './sections/modals.scss';
 
 // ---------------------------------- libs ----------------------------------
 
