--- a/src/components/_routes.html
+++ b/src/components/_routes.html
@@ -671,7 +671,11 @@
                         </li>
                     </ul>
 
-                    <button data-modal="#attractionsModal" class="routes__tabs-info-button btn _mobile-only">
+                    <button
+                        type="button"
+                        data-modal="#attractionsModal"
+                        class="routes__tabs-info-button btn _mobile-only"
+                    >
                         <span class="btn__txt">Достопримечательности</span>
                     </button>
                 </div>
