--- a/src/scss/sections/_news.scss
+++ b/src/scss/sections/_news.scss
@@ -1,4 +1,10 @@
 .news {
+    padding-top: 20.4rem;
+
+    @include small-tablet {
+        padding-top: 23rem;
+    }
+
     &__title {
         text-align: center;
         margin-bottom: 6rem;
