--- a/src/scss/sections/_rental.scss
+++ b/src/scss/sections/_rental.scss
@@ -1,9 +1,11 @@
 .rental {
     margin-bottom: 20rem;
+    padding-top: 20.4rem;
 
     @include small-tablet {
         min-height: 150rem;
         margin-bottom: 24rem;
+        padding-top: 23rem;
     }
 
     &__title {
