--- a/src/scss/libs/locomotive-scroll.css
+++ b/src/scss/libs/locomotive-scroll.css
@@ -38,7 +38,9 @@ html.has-scroll-dragging {
     width: 11px;
     height: 100%;
     transform-origin: center right;
-    transition: transform 0.3s, opacity 0.3s;
+    transition:
+        transform 0.3s,
+        opacity 0.3s;
     opacity: 0;
 }
 .c-scrollbar:hover {
