--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -34,7 +34,7 @@
             transform: translateY(-110%);
             &._is-visible {
                 transition: transform 1s cubic-bezier(0.22, 1, 0.36, 1);
-                transform: translate3d(0, calc(var(--scrollY) * -1), 0);
+                transform: translateY(0);
             }
         }
     }
